# linux_shell

./: .gitignore  CMakeLists.txt  README.md  main.c
inc/: defs.h  error_code.h  queen.h
src/: cat.c  cd.c  chmod.c  date.c  echo.c  error.c  exec.c  help.c  kill.c  ls.c  mkdir.c  output.c  pwd.c  queen.c  rm.c  rmdir.c  shell_function.c  shell_pipe.c  string_helper.c  wc.c  who.c  whoami.c
test/: backend.c  exec_test.c  shell_pipe.c
